--- a/personalwebsite/frontend/assets/html/index.html
+++ b/personalwebsite/frontend/assets/html/index.html
@@ -1,17 +1,37 @@
 <!doctype html>
 <html class="no-js" lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
-  </head>
-  <body>
+    <head>
+        <title><%= htmlWebpackPlugin.options.title %></title>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Foundation for Sites</title>
+    </head>
+    <body>
+        so is this working?
+        <div class="container">
+            <div class="row">
+                <div class="col s5">
+                    Thing01
+                </div>
+                <div class="col s5">
+                    Thing02
+                </div>
+                <div class="col s5">
+                    Thing03
+                </div>
+                <div class="col s5">
+                    Thing04
+                </div>
+                <div class="col s5">
+                    Thing05
+                </div>
+                
+            </div>
+        </div>
 
-    <script src="static/jquery/jquery-3.1.0.min.js"></script>
-    hi
-    <div id="react-app"></div>
-    {% render_bundle 'main' %}
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  </body>
+        <script src="static/jquery/jquery-3.1.0.min.js"></script>
+        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    </body>
 </html>
+
