a minimal working site

--- a/personalwebsite/frontend/assets/html/index.html
+++ b/personalwebsite/frontend/assets/html/index.html
@@ -8,27 +8,106 @@
         <title>Foundation for Sites</title>
     </head>
     <body>
-        so is this working?
-        <div class="container">
-            <div class="row">
-                <div class="col s5">
-                    Thing01
+
+        <div class="header">
+            <div class="hero valign-wrapper center-align">
+                <div class="container">
+                    <div class="row">
+                        <h4 class="title-text center-align">Title Text</h1>
+                    </div>
+                    <div class="row">
+                        <a class="waves-effect waves-light btn-large" href="">Button Text</a>
+                        <a class="waves-effect waves-light btn-large white grey-text" href="">Button Text</a>
+                    </div>
                 </div>
-                <div class="col s5">
-                    Thing02
-                </div>
-                <div class="col s5">
-                    Thing03
-                </div>
-                <div class="col s5">
-                    Thing04
-                </div>
-                <div class="col s5">
-                    Thing05
-                </div>
-                
             </div>
         </div>
+
+
+        <div class="container">
+        <div class="divider"></div>
+            <div class="row">
+                <div class="col s12 m4">
+                    <div class="card z-depth-2">
+                        <div class="card-image">
+                            <img  src="http://placehold.it/400x400.jpg" alt="showcase alt 1">
+                            <span class="card-title">Title Text</span>
+                        </div>
+                        <div class="card-content">
+                            The description for this card
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m4">
+                    <div class="card z-depth-2">
+                        <div class="card-image">
+                            <img src="http://placehold.it/400x400.jpg" alt="showcase alt 2">
+                            <span class="card-title">Title Text</span>
+                        </div>
+                        <div class="card-content">
+                            The description for this card
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m4">
+                    <div class="card z-depth-2">
+                        <div class="card-image">
+                            <img src="http://placehold.it/400x400.jpg" alt="showcase alt 3">
+                            <span class="card-title">Title Text</span>
+                        </div>
+                        <div class="card-content">
+                            The description for this card
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="divider"></div>
+
+
+            <div class="row">
+                <div class="col s12">
+                    <h3 class="center">Call to <span class="secondary-color">action</span> headline</h3>
+                </div>
+                <div class="col s12">
+                    <h5 class="center"> Call to action <span class="primary-color">subtext</span> </h5>
+                </div>
+                <form>
+                    <div class="col s12">
+                        <div class="row">
+                            <div class="col s12 m6 input-field">
+                                <input id="name" class="validate" type="text" placeholder="Name" />
+                                <label for="name">Name</label>
+                            </div>
+                            <div class="col s12 m6 input-field">
+                                <input id="email" class="validate" type="email" placeholder="Email" />
+                                <label for="email">Email</label>
+                            </div>
+                            <div class="col s12 input-field">
+                                <textarea id="message" class="materialize-textarea validate" placeholder="Message"></textarea>
+                                <label for="message">What do you think?</label>
+                            </div>
+                        </div>
+                    </div>
+                        <div class="row">
+                            <div class="col s12 hide-on-small-only">
+                                <button type="submit" class="hover btn-large waves-effect waves-light z-depth-2">
+                                    Submit
+                                    <i class="material-icons right">send</i>
+                                </button>
+                            </div>
+                            <div class="col s12 center hide-on-med-and-up">
+                                <button type="submit" class="btn-large waves-effect waves-light  center z-depth-2">
+                                    Submit
+                                    <i class="material-icons right">send</i>
+                                </button>
+                            </div>
+                        </div>
+                </form>
+            </div>
+        </div>
+
+        
+
 
         <script src="static/jquery/jquery-3.1.0.min.js"></script>
         <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
